# Signature

./: .gitignore  CMakeLists.txt  DataChank.cpp  DataChank.h  DataChunk.cpp  EmptyQueueException.cpp  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  HashProcess.cpp  HashProcess.h  Helpers.cpp  Helpers.h  README.md  WorkQueue.cpp  WorkQueue.h  main.cpp
includes/: ConcurrentQueue.h  DataChank.h  DataChunk.h  EmptyQueueException.h  FileReader.h  FileWriter.h  HashProcess.h  Helpers.h  WorkQueue.h
